--- a/assets/main.css
+++ b/assets/main.css
@@ -8,10 +8,6 @@ body {
   color: var(--color-white);
 }
 
-main > * {
-  padding: 4rem 0;
-}
-
 main {
   height: 70vh;
   background-image: url(../images/bg-stars.svg);
@@ -22,10 +18,87 @@ main {
   place-content: center;
   place-items: center;
 
+  & > * {
+    padding: var(--main-offset-y) 0;
+  }
+
   h1 {
-    font-size: var(--font-2xl);
+    font-size: var(--heading-font-size);
+    letter-spacing: var(--heading-tracking);
     text-transform: uppercase;
-    letter-spacing: 0.625rem;
+    text-align: center;
+  }
+
+  .countdown {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(var(--grid-col-width), 1fr));
+    grid-template-rows: auto;
+    gap: var(--grid-gap);
+    justify-content: center;
+
+    .countdown-card {
+      display: flex;
+      flex-direction: column;
+
+      .countdown-card__body {
+        position: relative;
+        width: var(--grid-col-width);
+        height: var(--countdown-card-height);
+        border-radius: 0.5rem;
+        overflow: hidden;
+
+        -webkit-box-shadow: 0 1rem 0 0 var(--color-darkest-blue);
+        -moz-box-shadow: 0 1rem 0 0 var(--color-darkest-blue);
+        box-shadow: 0 1rem 0 0 var(--color-darkest-blue);
+
+        &::before,
+        &::after {
+          background-color: var(--color-darkest-blue);
+          content: "";
+          position: absolute;
+          border-radius: 50%;
+          top: 50%;
+          transform: translateY(-50%);
+          height: var(--countdown-circle-size);
+          width: var(--countdown-circle-size);
+        }
+
+        &::before {
+          left: calc(var(--countdown-circle-size) / -2);
+        }
+
+        &::after {
+          right: calc(var(--countdown-circle-size) / -2);
+        }
+
+        .countdown-card__body--top {
+          height: 50%;
+          background-color: var(--color-darker-blue);
+        }
+        .countdown-card__body--bottom {
+          height: 50%;
+          background-color: var(--color-dark-blue);
+        }
+
+        span {
+          color: var(--color-soft-red);
+          font-size: var(--countdown-font-size);
+          position: absolute;
+          right: 50%;
+          top: 50%;
+          transform: translate(50%, -50%);
+        }
+      }
+
+      .countdown-card__title {
+        color: var(--color-white);
+        font-size: var(--labels-font-size);
+        letter-spacing: var(--labels-tracking);
+        margin-top: var(--labels-offset-top);
+        text-align: center;
+        text-transform: uppercase;
+      }
+    }
   }
 }
 
@@ -37,113 +110,34 @@ footer {
 
   display: flex;
   flex-direction: column;
-  align-items: end;
-  justify-content: center;
-}
-
-footer > * {
-  margin-block: 1rem;
-}
-
-.countdown {
-  display: flex;
-  flex-direction: row;
-}
-
-.countdown-card {
-  display: flex;
-  flex-direction: column;
-}
-.countdown-card__body {
-  position: relative;
-  width: 10.625rem;
-  height: 10rem;
-  margin-inline: 1rem;
-  border-radius: 0.5rem;
-  overflow: hidden;
-
-  -webkit-box-shadow: 0px 16px 0px 0px var(--color-darkest-blue);
-  -moz-box-shadow: 0px 16px 0px 0px var(--color-darkest-blue);
-  box-shadow: 0px 16px 0px 0px var(--color-darkest-blue);
-
-  &::before,
-  &::after {
-    background-color: var(--color-darkest-blue);
-    border-radius: 50%;
-    content: "";
-    height: 1rem;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 1rem;
-  }
-
-  &::before {
-    left: -0.5rem;
-  }
-
-  &::after {
-    right: -0.5rem;
-  }
-
-  span {
-    color: var(--color-soft-red);
-    font-size: 5.625rem;
-    position: absolute;
-    right: 50%;
-    top: 50%;
-    transform: translate(50%, -50%);
-  }
-}
-
-.countdown-card__body--top {
-  height: 50%;
-  background-color: var(--color-darker-blue);
-}
-.countdown-card__body--bottom {
-  height: 50%;
-  background-color: var(--color-dark-blue);
-}
-
-.countdown-card__title {
-  margin-top: 2rem;
-  text-align: center;
-  color: var(--color-white);
-  text-transform: uppercase;
-}
-
-.social-links {
-  display: flex;
-  flex-direction: row;
+  align-items: center;
   justify-content: center;
 
-  a {
-    margin-inline: 1rem;
+  & > * {
+    margin-block: 1rem;
+  }
 
-    img {
-      height: 1.5rem;
-      width: 1.5rem;
+  .social-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    a {
+      margin-inline: 1rem;
+
+      img {
+        height: 1.5rem;
+        width: 1.5rem;
+      }
     }
   }
-}
 
-.attribution {
-  font-size: 11px;
-  text-align: center;
+  .attribution {
+    font-size: 0.6875rem;
+    text-align: center;
 
-  a {
-    color: hsl(228, 45%, 44%);
-  }
-}
-
-.container {
-  width: 100%;
-  max-width: 1440px;
-  margin-inline: auto;
-}
-
-@media only screen and (max-width: 375px) {
-  .container {
-    max-width: 375px;
+    a {
+      color: hsl(228, 45%, 44%);
+    }
   }
 }
