--- a/assets/variables.css
+++ b/assets/variables.css
@@ -1,7 +1,4 @@
 :root {
-  --xs-screen: 375px; /* mobile */
-  --lg-screen: 1440px; /* desktop */
-
   --color-grayish-blue: hsl(237, 18%, 59%);
   --color-soft-red: hsl(345, 95%, 68%);
 
@@ -12,12 +9,41 @@
 
   --color-background: hsl(251, 27%, 16%);
 
-  --font-base: 0.875rem;
-  --font-lg: 1rem;
-  --font-xl: 1.5rem;
-  --font-2xl: 1.375rem;
-
   --font-family: "Red Hat Text", sans-serif;
   --font-weight: 700;
   --font-style: normal;
+
+  --grid-col-width: 9.25rem;
+  --grid-gap: 2rem;
+  --main-offset-y: 4rem;
+
+  --heading-font-size: 1.375rem;
+  --heading-tracking: 0.625rem;
+
+  --countdown-card-height: 8.75rem;
+  --countdown-font-size: 4.5rem;
+  --countdown-circle-size: 1rem;
+
+  --labels-font-size: 0.875rem;
+  --labels-offset-top: 1.5rem;
+  --labels-tracking: 0.375rem;
+}
+
+@media only screen and (max-width: 375px) {
+  :root {
+    --grid-col-width: 4.375rem;
+    --grid-gap: 1rem;
+    --main-offset-y: 1.625rem;
+
+    --heading-font-size: 1rem;
+    --heading-tracking: 0.525rem;
+
+    --countdown-circle-size: 0.5rem;
+    --countdown-card-height: 4.125rem;
+    --countdown-font-size: 2rem;
+
+    --labels-tracking: 0.15rem;
+    --labels-offset-top: 1rem;
+    --labels-font-size: 0.5rem;
+  }
 }
