--- a/assets/main.css
+++ b/assets/main.css
@@ -136,3 +136,19 @@ footer > * {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+/* ====================================
+  Utility classes
+==================================== */
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
